<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basic_tutorial</name>
  <version>0.0.0</version>
  <description>Basic ROS2 Tutorial</description>
  <maintainer email="jdiller@mines.edu">jdiller</maintainer>
  <license>This package has various ROS2 tutorial code.</license>

  <depend>example_interfaces</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tutorial_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
